# marvin-sw-text-adventure

./: .gitignore  .marvin-sw-text-adventure-copier-answers.yml  CHANGELOG.md  LICENSE.txt  Operation Shadow Hand-Kara Bright-4-Kashyyyk-General_Rieekan.txt  README.md  pyproject.toml
marvin_sw_text_adventure/: __about__.py  __main__.py  config.py  console.py  game.py  standard_config.py
marvin_sw_text_adventure/cli/: app.py  common.py  config.py  game.py  tui.py
marvin_sw_text_adventure/tui/: app.css  app.py
tests/: __init__.py
